fixed <li> discs not centered in Chromium

--- a/frontend/src/components/main/description/Description.css
+++ b/frontend/src/components/main/description/Description.css
@@ -27,6 +27,10 @@
   margin-bottom: 4px;
 }
 
+ul.obj-desc {
+  list-style-position: inside;
+}
+
 .obj-desc li {
   margin-bottom: 4px;
 }
